# PaganiniDB

./: .gitignore
db/: bootstrap  clean  configure.ac  sql  stats
db/src/: Makefile.am  insp  locks  reader_writer  test  test.c  test.cpp  threads  treetest.cpp
db/src/client/: client.cpp
db/src/concurrency/: FileLocker.cpp  FilePageLocker.cpp  Makefile.am  MutexPthread.cpp  SemaphorePthread.cpp  ThreadPageLocker.cpp
db/src/concurrency/pthread/: Mutex.cpp  Semaphore.cpp  Thread.cpp
db/src/database/: Makefile.am
db/src/error_msg/: Error.cpp  Makefile.am  error_codes.c  error_codes.cpp  error_msg.c  error_msg.cpp
db/src/include/: Error.h  error_msg.h  paganini.h  pdb_error.h
db/src/include/paganini/: Error.h  error_msg.h  paganini.h
db/src/include/paganini/concurrency/: FileLocker.h  FilePageLocker.h  GenericPageLocker.h  MutexPthread.h  PageLock.h  ReadWriteLock.h  ScopeLock.h  SemaphorePthread.h  SystemError.h  ThreadPageLocker.h  ThreadPthread.h
db/src/include/paganini/concurrency/pthread/: Mutex.h  Semaphore.h  Thread.h
db/src/include/paganini/database/: DatabaseEngine.h  DatabaseError.h  Table.h
db/src/include/paganini/indexing/: BTree.h  ComparatorFactory.h  Index.h  IndexComparator.h  IndexReader.h  IndexWriter.h  RowIndexer.h
db/src/include/paganini/inspect/: InfoFormatter.h  format_bytes.h  primitives.h
db/src/include/paganini/io/: BinaryStream.h  InputBinaryStream.h  OutputBinaryStream.h
db/src/include/paganini/networking/: NetworkingError.h  address.h  buffers.h  send.h
db/src/include/paganini/networking/unix/: Acceptor.h  Socket.h  SocketFactory.h
db/src/include/paganini/paging/: DataPage.h  DatabaseHeader.h  DummyLocker.h  FilePersistenceManager.h  Page.h  PageBuffer.h  PageHeader.h  PageManager.h  configuration.h  types.h
db/src/include/paganini/row/: BinaryStream.h  Comparator.h  FieldFactory.h  InputBinaryStream.h  OutputBinaryStream.h  Row.h  RowFormat.h  RowReader.h  RowWriter.h  TypeMapping.h  datatypes.h
db/src/include/paganini/util/: Bitmap.h  IndexedIterator.h  IndexedView.h  ReverseArray.h  Singleton.h  bits.h  format.h
db/src/include/paganini/util/lexer/: Lexer.h  StringUtils.h  TokenSequence.h  Tokenizer.h
db/src/include/paging/: DatabaseHeader.h  Page.h  PageHeader.h  PageManager.h  dbfile_header.h  page.h  page_header.h  page_manager.h  types.h
db/src/include/row/: Row.h  RowFormat.h  datatypes.h
db/src/include/util/: Format.h  IndexedIterator.h  IndexedView.h  bits.h  format.h
db/src/indexing/: ComparatorFactory.cpp  Index.cpp  IndexReader.cpp  IndexWriter.cpp  Makefile.am  RowIndexer.cpp
db/src/inspect/: InfoFormatter.cpp  Makefile.am
db/src/inspector/: cmd.c  cmd.cpp  cmd.h  main.c  main.cpp  operations.c  operations.cpp  operations.h
db/src/io/: BinaryStream.cpp  InputBinaryStream.cpp  Makefile.am  OutputBinaryStream.cpp
db/src/networking/: Makefile.am
db/src/paging/: DataPage.cpp  DatabaseHeader.cpp  FilePersistenceManager.cpp  Makefile.am  Page.cpp  PageBuffer.cpp  PageHeader.cpp  PageManager.cpp  page.c  page.cpp  page_manager.c  page_manager.cpp
db/src/row/: BinaryStream.cpp  FieldFactory.cpp  FieldMetadata.cpp  InputBinaryStream.cpp  Makefile.am  OutputBinaryStream.cpp  Row.cpp  RowFormat.cpp  RowReader.cpp  RowWriter.cpp  datatypes.cpp
db/src/server/: DatabaseServer.h  Interpreter.h  server.cpp
db/src/tests/: LockingTest.cpp  LockingThreadTest.cpp  NetTestClient.cpp  NetTestServer.cpp  ReaderWriterTest.cpp  ThreadsTest.cpp
db/src/tools/dbshell/: Interpreter.cpp  Interpreter.h  shell.cpp  treetest.cpp
db/src/util/: Makefile.am
db/src/util/lexer/: Lexer.cpp
