AM_CPPFLAGS = -I ../include

noinst_LTLIBRARIES = libdatabase.la
libdatabase_la_SOURCES = 

libdatabase_la_includedir = ${includedir}/paganini/database

libdatabase_la_include_HEADERS = ../include/paganini/database/Table.h \
                                 ../include/paganini/database/DatabaseEngine.h
