AM_CPPFLAGS = -I ../include

noinst_LTLIBRARIES = libindexing.la
libindexing_la_SOURCES = ComparatorFactory.cpp

libindexing_la_includedir = ${includedir}/paganini/indexing

libindexing_la_include_HEADERS = ../include/paganini/indexing/IndexComparator.h \
                                 ../include/paganini/indexing/ComparatorFactory.h \
                                 ../include/paganini/indexing/BTree.h
