AM_CPPFLAGS = -I ../include

noinst_LTLIBRARIES = libinspect.la
libinspect_la_SOURCES = InfoFormatter.cpp

libinspect_la_includedir = ${includedir}/paganini/inspect

libinspect_la_include_HEADERS = ../include/paganini/inspect/primitives.h \
                                ../include/paganini/inspect/format_bytes.h \
                                ../include/paganini/inspect/InfoFormatter.h
