AM_CPPFLAGS = -I ../include

noinst_LTLIBRARIES = libio.la
libio_la_SOURCES = BinaryStream.cpp \
                   InputBinaryStream.cpp \
                   OutputBinaryStream.cpp

libio_la_includedir = ${includedir}/paganini/row

libio_la_include_HEADERS = ../include/paganini/io/BinaryStream.h \
                           ../include/paganini/io/InputBinaryStream.h \
                           ../include/paganini/io/OutputBinaryStream.h
