AM_CPPFLAGS = -I ../include

noinst_LTLIBRARIES = librow.la
librow_la_SOURCES = datatypes.cpp \
                    RowFormat.cpp \
                    Row.cpp

librow_la_includedir = ${includedir}/paganini/row

librow_la_include_HEADERS = ../include/paganini/row/datatypes.h \
                            ../include/paganini/row/RowFormat.h \
                            ../include/paganini/row/Row.h
