AM_CPPFLAGS = -I ../include

noinst_LTLIBRARIES = librow.la
librow_la_SOURCES = datatypes.cpp \
                    RowFormat.cpp \
                    Row.cpp \
                    FieldFactory.cpp \
                    BinaryStream.cpp \
                    InputBinaryStream.cpp \
                    OutputBinaryStream.cpp \
                    RowWriter.cpp \
                    RowReader.cpp

librow_la_includedir = ${includedir}/paganini/row

librow_la_include_HEADERS = ../include/paganini/row/datatypes.h \
                            ../include/paganini/row/RowFormat.h \
                            ../include/paganini/row/Row.h \
                            ../include/paganini/row/FieldFactory.h \
                            ../include/paganini/row/BinaryStream.h \
                            ../include/paganini/row/InputBinaryStream.h \
                            ../include/paganini/row/OutputBinaryStream.h \
                            ../include/paganini/row/RowWriter.h \
                            ../include/paganini/row/RowReader.h
