AM_CPPFLAGS = -I ../include

noinst_LTLIBRARIES = libutil.la
libutil_la_SOURCES = lexer/Lexer.cpp

libutil_la_includedir = ${includedir}/paganini/util

libutil_la_lexer_includedir = ${includedir}/paganini/util/lexer

libutil_la_lexer_include_HEADERS = ../include/paganini/util/lexer/Lexer.h

libutil_la_include_HEADERS = ../include/paganini/util/bits.h \
                             ../include/paganini/util/Bitmap.h \
                             ../include/paganini/util/format.h \
                             ../include/paganini/util/IndexedIterator.h \
                             ../include/paganini/util/IndexedView.h \
                             ../include/paganini/util/Singleton.h
